run api and postgres together using docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.9"
+
 services:
   postgres:
     image: postgres:16
@@ -11,6 +12,18 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+
+  api:
+    build: .
+    container_name: go_postgres_micro_api
+    environment:
+      PORT: "8080"
+      # NOTE: host is "postgres" (service name), not localhost
+      DATABASE_URL: "postgres://app:app123@postgres:5432/appdb?sslmode=disable"
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
 
 volumes:
   pgdata:
