--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   postgres:
     image: postgres:16
@@ -14,11 +12,12 @@ services:
       - pgdata:/var/lib/postgresql/data
 
   api:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: go_postgres_micro_api
     environment:
       PORT: "8080"
-      # NOTE: host is "postgres" (service name), not localhost
       DATABASE_URL: "postgres://app:app123@postgres:5432/appdb?sslmode=disable"
     ports:
       - "8080:8080"
